package com.paypal.android.ui.card

enum class CardOption {
    SCA, VAULT_CUSTOMER_ID, CARD_NUMBER, CARD_EXPIRATION_DATE, CARD_SECURITY_CODE
}
