<resources>
    <string name="app_name">AndroidSDK</string>

    <!-- Payment Methods -->
    <string name="feature_approve_order">Approve Order</string>
    <string name="feature_vault">Vault</string>
    <string name="feature_paypal_checkout">PayPal Checkout</string>
    <string name="feature_paypal_vault">Paypal Vault</string>
    <string name="feature_paypal_buttons">PayPal Buttons</string>
    <string name="feature_paypal_static_buttons">PayPal Buttons - XML</string>
    <string name="feature_pay_with_venmo">Pay with Venmo</string>

    <!-- Card Fields -->
    <string name="card_field_card_number">CARD NUMBER</string>
    <string name="card_field_expiration">EXP. DATE</string>
    <string name="card_field_security_code">SEC. CODE</string>

    <string name="sca_title">SCA</string>
    <string-array name="sca_options">
        <item>SCA_ALWAYS</item>
        <item>SCA_WHEN_REQUIRED</item>
    </string-array>

    <string name="pay_pal_button_preview">Button Preview</string>
    <string name="pay_pal_button_options">Button Options</string>
    <string name="pay_pal_button_type">Button Type</string>
    <string name="pay_pal_button_color">Button Color</string>
    <string name="pay_pal_button_label">Button Label</string>
    <string name="pay_pal_button_shape">Button Shape</string>
    <string name="pay_pal_button_size">Button Size</string>

    <string name="intent_title">INTENT</string>
    <string-array name="intent_options">
        <item>AUTHORIZE</item>
        <item>CAPTURE</item>
    </string-array>

    <string name="store_in_vault">STORE IN VAULT</string>
    <string-array name="store_in_vault_options">
        <item>NO</item>
        <item>ON_SUCCESS</item>
    </string-array>

    <string name="amount_title">AMOUNT (USD)</string>
    <string name="launch_paypal">Launch PayPal</string>
    <string-array name="pay_pal_funding_source_options">
        <item>PAYPAL_CREDIT</item>
        <item>PAY_LATER</item>
        <item>PAYPAL</item>
    </string-array>

    <string name="payment_method_title">PAYMENT METHOD</string>

    <string name="user_action_title">USER ACTION</string>
    <string-array name="user_action_options">
        <item>CONTINUE</item>
        <item>PAY_NOW</item>
        <item>SETUP_NOW</item>
    </string-array>

    <string name="launch_venmo">Launch Venmo</string>

</resources>
